--- a/css/styles.css
+++ b/css/styles.css
@@ -133,15 +133,20 @@ ul {
   margin-right: 50px;
 }
 .contacts {
+  display: flex;
+  align-items: center;
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  gap: 10px;
+  fill: currentColor;
 }
 .contacts:hover,
 .contacts:focus {
   color: var(--accent-color);
+  fill: currentColor;
 }
 
 /* Секция-герой */
@@ -154,7 +159,12 @@ ul {
   background-color: var(--section-background-color);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero1.jpg);
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
 }
 .hero-title {
@@ -192,10 +202,6 @@ ul {
 }
 
 /* Наші переваги (benefits) */
-/* .benefits .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-} */
 .benefits-list {
   display: flex;
   align-items: flex-start;
@@ -204,7 +210,19 @@ ul {
   margin-right: 30px;
   flex-basis: calc((100% - 90px) / 4);
 }
+.benefits-list .item::before {
+  display: block;
+  content: '';
+  height: 120px;
+  padding: 25px 100px;
+  background-color: var(--secondary-bcg-color);
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
+.icon-antenna::before {
+  background-image: url('../images/icons.svg#icon-antenna1');
+}
 .benefits-list .item:last-child {
   margin-right: 0;
 }
@@ -266,7 +284,7 @@ ul {
   margin-right: 30px;
 }
 .team-description {
-  padding: 30px 0px;
+  padding: 30px 32px;
 }
 .team-member .title {
   font-weight: 500;
@@ -277,6 +295,59 @@ ul {
 .team-member-text {
   font-size: 16px;
   line-height: 1.18;
+  margin-bottom: 16px;
+}
+
+.soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.soc-link {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #afb1b8;
+  background-color: var(--main-light-color);
+}
+
+.soc-icon {
+  fill: currentColor;
+}
+.soc-link:hover {
+  background-color: var(--accent-color);
+  color: var(--main-light-color);
+}
+
+/* Постійні клієнти */
+
+.clients .section-title {
+  margin-bottom: 50px;
+}
+.clients-list {
+  display: flex;
+  gap: 30px;
+}
+.clients-item {
+  width: calc((100% - 150px) / 6);
+}
+.clients-link {
+  width: 100%;
+  height: 92px;
+  display: flex;
+  color: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+}
+.clients-icon {
+  fill: currentColor;
+}
+.clients-link:hover {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Футер */
@@ -311,6 +382,44 @@ address .contacts {
 .location:hover,
 .location:focus {
   color: var(--accent-color);
+}
+.page-footer-contacts {
+  display: block;
+}
+.page-footer-soc-block {
+  margin-left: 70px;
+  display: block;
+}
+.soc-links-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--main-light-color);
+  align-items: baseline;
+}
+.page-footer .soc-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  align-items: baseline;
+}
+.page-footer .soc-link {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: var(--main-light-color);
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.page-footer .soc-icon {
+  fill: currentColor;
+}
+.page-footer .soc-link:hover {
+  background-color: var(--accent-color);
 }
 
 /* Стили для portfolio.html */
@@ -357,6 +466,15 @@ address .contacts {
 }
 .projects-item {
   flex-basis: calc((100% - 60px) / 3);
+}
+.projects-link {
+  display: block;
+  background: #ffffff;
+  color: var(--primary-text-color);
+}
+.projects-link:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .projects-discription {
   padding: 20px 24px;
